# Laminar

./: README.md  gen_eclipse.sh  lmn.alias  lmncheck.py  patch_eclipse_nvcc_macro.py
cmake/: CMakeLists.txt  FindOpenCL.cmake  eona_cuda.cmake  eona_eigen.cmake  eona_gtest.cmake  eona_opencl.cmake
data/corpus/: README.md  preprocess.py  processor.py
doc/: DesignDoc.md  Manual.md  PerformanceReport.md  README.md  Tutorial.md
src/: CMakeLists.txt  activation_layer.h  bias_layer.h  cadenza.cu  component.h  composite.h  connection.h  debug_utils.h  dummy.cu  evaluator.h  full_connection.h  gated_connection.h  global_utils.h  gpu_utils.h  gradient_check.h  input_layer.h  laminar.cu  laminar_utils.h  layer.h  learning_listener.h  learning_session.h  loss_layer.h  lstm.h  lstm_layer.h  main.cu  math_utils.h  network.h  optimizer.h  output_layer.h  parameter.h  rand_utils.h  recurrent_layer.h  rnn.h  serializer.h  timer.h  transfer_layer.h
src/backend/: cuda_engine.h  dummy_engine.h  rand_dataman.h
src/backend/cublas/: CMakeLists.txt  cublas_dataman.h  cublas_engine.h  cudaFloatMat.h  cuda_engine.h  cuda_float_mat.h  cuda_float_mat.h.depricated  cuda_func.h  gradcheck.cu  mult_test.cu  test_engine.cu
src/backend/cuda/: CMakeLists.txt  Makefile  README.md  cuda_engine.h  cuda_func.h  mult_test.cu  test_engine.cu
src/backend/dummy/: dummy_data.h  dummy_dataman.h  dummy_engine.h
src/backend/eigen/: eigen_engine.h
src/backend/opencl/: CMakeLists.txt  dummy.cl  makefile  mat_op_kernel.cl  ocl_dummy.cc  ocl_engine_test.cc  ocl_util.h  opencl_engine.h  opencl_float_mat.h
src/backend/testmat/: makefile.cl  mat_op_kernel.cl  test.cc
src/backend/types/: CMakeLists.txt  cuda_float_mat.h  gpu_float_mat.h  gpu_profiler.h  joint_test.cpp  opencl_float_mat.h  performance_profiler.h  performance_profiler.h.backup  profile_test.cpp
src/backend/vecmat/: vecmat.h  vecmat_dataman.h  vecmat_engine.h  vecmat_func_dataman.h  vecmat_rand_dataman.h
src/backend/vector/: vecmat.h  vecmat_dataman.h  vecmat_engine.h  vector_dataman.h  vector_engine.h  vector_mat.h
src/demo/mnist/: CMakeLists.txt  README.md  cublas_mnist_dataman.h  cublas_mnist_train.cu  cublas_train.cu  eigen_mnist_train.cpp  mnist_dataman.h  mnist_parser.h  opencl_mnist_dataman.h  opencl_mnist_train.cpp  opencl_train.cpp  vecmat_mnist_dataman.h  vecmat_mnist_train.cpp  vecmat_train.cpp
src/demo/nlp/: CMakeLists.txt  corpus_dataman.h  corpus_loader.h  cublas_nlp_train.cu  eigen_nlp_train.cpp  vecmat_nlp_train.cpp  vecmat_train_nlp.cpp
src/engine/: data_manager.h  data_stream.h  dummy_data.h  dummy_engine.h  engine.h  instructions.h  tensor.h  tensor_ops.h
src/test/: CMakeLists.txt  cublas_forward_test.cu  cublas_helper.h  cublas_lstm_test.cu  cuda_test.cu  dummy_forward_test.cpp  dummy_lstm_test.cpp  dummy_lstm_test.cu  dummy_rnn_test.cpp  eigen_forward_test.cpp  eigen_helper.h  eigen_lstm_test.cpp  eigen_rnn_test.cpp  forward_dummy_test.cu  forward_net_test.cu  forward_vecmat_test.cu  misc_test.cu  moretest.cpp  opencl_forward_test.cpp  opencl_helper.h  opencl_lstm_test.cpp  rand_dataman.h  recurrent_net_test.cu  rnn_dummy_test.cu  rnn_vecmat_test.cu  test_utils.h  vecmat_forward_test.cpp  vecmat_lstm_test.cpp  vecmat_lstm_test.cu  vecmat_rnn_test.cpp
src/utils/: debug_utils.h  global_utils.h  gpu_utils.h  laminar_utils.h  rand_utils.h  timer.h
test/: moretest.cpp  mygtest.cpp
